--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,5 @@
-
-blank_issue_enabled : false
-contact_links :
-  - name : 질문은 Discussions에서!
-    url : https://github.com/kimym98/github-project/discussions
-    about : 질문이나 일반적인 논의는 Discussions 탭을 이용해주세요.
+blank_issues_enabled: false
+contact_links:
+  - name: 💬 질문은 Discussions에서!
+    url: https://github.com/your-org/your-repo/discussions
+    about: 질문이나 일반적인 논의는 Discussions 탭을 이용해주세요.
